# C14

./: CMakeLists.txt  README.md
dependency_management/: CMakeLists.txt
dependency_management/src/: main.cpp
dependency_management/src/service/: movie_service.hpp
moviedb/: CMakeLists.txt
moviedb/data/: movies.json
moviedb/src/model/: movie.hpp
moviedb/src/service/: movie_service.hpp
moviedb/tests/: CMakeLists.txt  movie_service_tests.cpp
scripts/: build.sh  run.sh
